--- a/index.html
+++ b/index.html
@@ -44,21 +44,21 @@
 </p></li></ul>
     <head>
          <h3><b><u>WHY ARE WE DOING THIS?</u></b></h3>
-</head><li><ul>
+</head>
     <p>
         Although it is clear to some people, others have trouble understanding the nation’s frustration.  This country was built upon slavery and this nation only felt free for the whites.  As the world grows and many of the viewpoints change, black people start to take action for a better life.  Yes, they got the 13th amendment, however white supremacys are continuing to find ways for them to rule black Americans.  This led to segregation and discrimination.  This also led to the civil right movement.  Even then, racism is still in the system.  And we are tired of it because nothing has really changed.
 </p>
     <p>
         As I am a first generation American, and at first I did not understand the frustration of this matter.  But as I began to understand these matters and teach myself these events, I understand their troubles.  And it’s not only just understanding, I experienced their troubles.  I experienced racism and discrimination, although not as frequent as blacks do.  But many people experienced racism throughout their lives, so how much has changed from the civil rights movement to now? How much has changed as blacks still fear for their lives as they go out? How much has changed as kids are experiencing racism at such a young age?
         
- </p></ul></li>
+ </p>
     <head>
         <h3><b><u>RESOURCES</u></b></h3>
     <p>
-        https://blacklivesmatter.carrd.co/ 
-        https://variety.com/2020/digital/news/11-anti-racist-accounts-that-are-worth-following-1234621505/
-        http://www.blacktablearts.com/
-        https://docs.google.com/document/u/1/d/12y7-Wa4gi8HUeFTv17gPcbMGuVX5cqIudLJmhOrq1-k/mobilebasic
+        blacklivesmatter.carrd.co/ 
+        variety.com/2020/digital/news/11-anti-racist-accounts-that-are-worth-following-1234621505/
+        www.blacktablearts.com/
+        docs.google.com/document/u/1/d/12y7-Wa4gi8HUeFTv17gPcbMGuVX5cqIudLJmhOrq1-k/mobilebasic
 
     </p>
 </head>
